--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,12 @@ dependencies {
     //Google Support Libraries
     def supportLibraryVersion = '23.3.0'
 
-    compile "com.android.support:appcompat-v7:23.4.0"
-    compile "com.android.support:design:23.4.0"
+    compile "com.android.support:appcompat-v7:${supportLibraryVersion}"
+    compile "com.android.support:design:${supportLibraryVersion}"
+    compile "com.android.support:cardview-v7:${supportLibraryVersion}"
     compile "com.jakewharton:butterknife:7.0.1"
     compile "com.squareup.picasso:picasso:2.5.2"
-    compile "com.android.support:cardview-v7:${supportLibraryVersion}"
+
     // Logging
     compile 'com.jakewharton.timber:timber:4.1.2'
 }
